@@ -1,3 +1,5 @@
+    * Fix block breaking particles not having textures, fixes #7.
+
 1.0.0-beta2:
     * Fix grass slabs not having a name and creative tab.
     * Fix the trowel not placing the blocks client-side, fixes #4.
